unpackaged/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <formula>Bill_To__r.BillingStreet &amp; BR() &amp;
 Bill_To__r.BillingCity &amp; &quot;, &quot; &amp;
 Bill_To__r.BillingState &amp; &quot; &quot; &amp;
 Bill_To__r.BillingPostalCode &amp; BR() &amp;
 Bill_To__r.BillingCountry</formula>
    <label>Bill To Address</label>
    <type>Text</type>
</CustomField>