unpackaged/main/default/objects/SBQQ__Quote__c/fields/Billing_Frequency_Japan__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_Japan__c</fullName>
    <label>Billing Frequency (Japan)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一括 （年毎）</fullName>
            </value>
            <value>
                <fullName>半年毎</fullName>
            </value>
            <value>
                <fullName>四半期毎</fullName>
            </value>
            <value>
                <fullName>毎月</fullName>
            </value>
            <value>
                <fullName>別途備考欄をご参照ください。</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>