unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Contract_Type__c)</formula>
    <label>Contract Type (Opportunity)</label>
    <type>Text</type>
</CustomField>