unpackaged/main/default/objects/SBQQ__Quote__c/fields/EMRR__c.field-meta.xml
<CustomField>
    <fullName>EMRR__c</fullName>
    <label>EMRR</label>
    <summarizedField>SBQQ__QuoteLine__c.EMRR__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>