unpackaged/main/default/objects/SBQQ__Quote__c/fields/EMRR_Prorated_Term__c.field-meta.xml
<CustomField>
    <fullName>EMRR_Prorated_Term__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__MasterContract__c)), ROUND((SBQQ__MasterContract__r.EndDate - SBQQ__StartDate__c) / 30.43685,1), SBQQ__SubscriptionTerm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMRR Prorated Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>