unpackaged/main/default/objects/SBQQ__Quote__c/fields/End_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Name__c</fullName>
    <label>End Customer Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>