unpackaged/main/default/objects/SBQQ__Quote__c/fields/Has_Legal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Has_Legal_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Legal Notes</label>
    <type>Checkbox</type>
</CustomField>