unpackaged/main/default/objects/SBQQ__Quote__c/fields/Has_One_Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Has_One_Time_Revenue__c</fullName>
    <formula>One_Time_Revenue__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has One Time Revenue</label>
    <type>Checkbox</type>
</CustomField>