unpackaged/main/default/objects/SBQQ__Quote__c/fields/Initial_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Initial_Subscription_Term__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__MasterContract__c)),  SBQQ__MasterContract__r.ContractTerm,  SBQQ__SubscriptionTerm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Subscription Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>