unpackaged/main/default/objects/SBQQ__Quote__c/fields/Initial_Term_Amount_Renew__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Amount_Renew__c</fullName>
    <label>Initial Term Amount (Renewables)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>