unpackaged/main/default/objects/SBQQ__Quote__c/fields/Initial_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Length__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Opportunity2__r.Contract_Type__c, &quot;Ramp Contract&quot;) &amp;&amp; SBQQ__SubscriptionTerm__c &gt; 12 &amp;&amp;  Outgoing_Document_Mandatory_Renewal__c, MOD(SBQQ__SubscriptionTerm__c, 12) + 12, IF(ISPICKVAL(SBQQ__Opportunity2__r.Contract_Type__c, &quot;Standard Term Contract&quot;) &amp;&amp; Outgoing_Document_Mandatory_Renewal__c, 12, SBQQ__SubscriptionTerm__c))</formula>
    <label>Initial Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>