unpackaged/main/default/objects/SBQQ__Quote__c/fields/Initial_Term_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Total_Amount__c</fullName>
    <formula>Initial_Term_Amount_Renew__c + One_Time_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>