unpackaged/main/default/objects/SBQQ__Quote__c/fields/Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email__c</fullName>
    <formula>SBQQ__Opportunity2__r.Invoice_Email_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Email</label>
    <type>Text</type>
</CustomField>