unpackaged/main/default/objects/SBQQ__Quote__c/fields/Is_Legacy_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Legacy_Quote__c</fullName>
    <formula>CONTAINS( Pricebook_Name__c , &#39;Legacy&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Legacy Quote</label>
    <type>Checkbox</type>
</CustomField>