unpackaged/main/default/objects/SBQQ__Quote__c/fields/Is_Ramp_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Ramp_Deal__c</fullName>
    <formula>ISPICKVAL(SBQQ__Opportunity2__r.Contract_Type__c, &quot;Ramp Contract&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ramp Deal</label>
    <type>Checkbox</type>
</CustomField>