unpackaged/main/default/objects/SBQQ__Quote__c/fields/isAddOn__c.field-meta.xml
<CustomField>
    <fullName>isAddOn__c</fullName>
    <formula>OR (
Renewal_Extension__c = TRUE,
ISPICKVAL(SBQQ__Opportunity2__r.Deal_Type__c, &quot;Add-on&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAddOn</label>
    <type>Checkbox</type>
</CustomField>