unpackaged/main/default/objects/SBQQ__Quote__c/fields/isNotAddOn__c.field-meta.xml
<CustomField>
    <fullName>isNotAddOn__c</fullName>
    <formula>NOT(isAddOn__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isNotAddOn</label>
    <type>Checkbox</type>
</CustomField>