unpackaged/main/default/objects/SBQQ__Quote__c/fields/Japanese_Template_Hide_Address__c.field-meta.xml
<CustomField>
    <fullName>Japanese_Template_Hide_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the address from the Japanese template header.</description>
    <inlineHelpText>Hide the address from the Japanese template header.</inlineHelpText>
    <label>Japanese Template - Hide Address</label>
    <type>Checkbox</type>
</CustomField>