unpackaged/main/default/objects/SBQQ__Quote__c/fields/Japanese_Template_Show_Address__c.field-meta.xml
<CustomField>
    <fullName>Japanese_Template_Show_Address__c</fullName>
    <description>Used to control the visibility of the template header.</description>
    <formula>If(Japanese_Template_Hide_Address__c,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to control the visibility of the template header.</inlineHelpText>
    <label>Japanese Template - Show Address</label>
    <type>Checkbox</type>
</CustomField>