unpackaged/main/default/objects/SBQQ__Quote__c/fields/JPN_Hide_Address_No_Add_on__c.field-meta.xml
<CustomField>
    <fullName>JPN_Hide_Address_No_Add_on__c</fullName>
    <description>New Business Not Multi Year</description>
    <formula>Japanese_Template_Hide_Address__c = True &amp;&amp; NOT(ISPICKVAL(SBQQ__Type__c, &#39;Amendment&#39;)) &amp;&amp; NOT(ISPICKVAL(SBQQ__Opportunity2__r.Deal_Type__c,&#39;Renewal&#39;)) &amp;&amp; SBQQ__SubscriptionTerm__c &lt;= 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NB-HA</label>
    <type>Checkbox</type>
</CustomField>