unpackaged/main/default/objects/SBQQ__Quote__c/fields/JPN_Show_Address_NO_ADD_ON__c.field-meta.xml
<CustomField>
    <fullName>JPN_Show_Address_NO_ADD_ON__c</fullName>
    <formula>Japanese_Template_Show_Address__c = True &amp;&amp; NOT(ISPICKVAL(SBQQ__Type__c, &#39;Amendment&#39;)) &amp;&amp; NOT(ISPICKVAL(SBQQ__Opportunity2__r.Deal_Type__c,&#39;Renewal&#39;)) &amp;&amp; SBQQ__SubscriptionTerm__c &lt;= 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NB-SA</label>
    <type>Checkbox</type>
</CustomField>