unpackaged/main/default/objects/SBQQ__Quote__c/fields/Mandatory_Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Renewal_Term__c</fullName>
    <formula>TEXT((SBQQ__SubscriptionTerm__c - Initial_Term_Length__c)/12) &amp; &quot; x 12 Months&quot;</formula>
    <label>Mandatory Renewal Term</label>
    <type>Text</type>
</CustomField>