unpackaged/main/default/objects/SBQQ__Quote__c/fields/Mandatory_Renewal_Term_Japan__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Renewal_Term_Japan__c</fullName>
    <label>Auto-Renewal Term Japan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>