unpackaged/main/default/objects/SBQQ__Quote__c/fields/NB_MY_SA__c.field-meta.xml
<CustomField>
    <fullName>NB_MY_SA__c</fullName>
    <description>New Business, Show Address Multi Year</description>
    <formula>Japanese_Template_Show_Address__c = True &amp;&amp; isNotAddOn__c = True &amp;&amp; Deal_Type__c &lt;&gt; &quot;Renewal&quot; &amp;&amp; SBQQ__SubscriptionTerm__c &gt; 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NB-MY-SA</label>
    <type>Checkbox</type>
</CustomField>