unpackaged/main/default/objects/SBQQ__Quote__c/fields/Not_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Not_Amendment__c</fullName>
    <formula>TEXT(SBQQ__Type__c) &lt;&gt; &quot;Amendment&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Amendment</label>
    <type>Checkbox</type>
</CustomField>