unpackaged/main/default/objects/SBQQ__Quote__c/fields/Not_Enterprise_Quote__c.field-meta.xml
<CustomField>
    <fullName>Not_Enterprise_Quote__c</fullName>
    <formula>NOT(CONTAINS(Pricebook_Name__c, &quot;Enterprise&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Enterprise Quote</label>
    <type>Checkbox</type>
</CustomField>