unpackaged/main/default/objects/SBQQ__Quote__c/fields/Not_Legacy_Quote__c.field-meta.xml
<CustomField>
    <fullName>Not_Legacy_Quote__c</fullName>
    <formula>NOT(CONTAINS( Pricebook_Name__c, &#39;Legacy&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Legacy Quote</label>
    <type>Checkbox</type>
</CustomField>