unpackaged/main/default/objects/SBQQ__Quote__c/fields/One_Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Revenue__c</fullName>
    <label>One Time Revenue</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__SubscriptionType__c</field>
        <operation>equals</operation>
        <value>One-time</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>