unpackaged/main/default/objects/SBQQ__Quote__c/fields/Outgoing_Document_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Document_Effective_Date__c</fullName>
    <formula>IF(Use_Start_Date_as_Effective_Date__c,
LPAD(TEXT(DAY(SBQQ__StartDate__c)), 2 , &quot;0&quot;) &amp;&quot;-&quot;&amp;
CASE(MONTH(SBQQ__StartDate__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;&quot;)&amp;&quot;-&quot;&amp;
TEXT(YEAR(SBQQ__StartDate__c)), &quot;Date of Last Signature Below&quot;)</formula>
    <label>Outgoing Document - Effective Date</label>
    <type>Text</type>
</CustomField>