unpackaged/main/default/objects/SBQQ__Quote__c/fields/Outgoing_Document_Hide_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Document_Hide_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box will hide the start date from the paperwork</inlineHelpText>
    <label>Outgoing Document - Hide Start Date</label>
    <type>Checkbox</type>
</CustomField>