unpackaged/main/default/objects/SBQQ__Quote__c/fields/Outgoing_Document_Mandatory_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Document_Mandatory_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked mandtory renewal information will be show on the paperwork</inlineHelpText>
    <label>Outgoing Document - Mandatory Renewal</label>
    <type>Checkbox</type>
</CustomField>