unpackaged/main/default/objects/SBQQ__Quote__c/fields/Outgoing_Document_Show_First_Term_Fees__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Document_Show_First_Term_Fees__c</fullName>
    <formula>(TEXT(SBQQ__Opportunity2__r.Deal_Type__c) &lt;&gt; &quot;Renewal&quot; &amp;&amp; TEXT(SBQQ__Opportunity2__r.Deal_Type__c) &lt;&gt; &quot;Early Renewal&quot; &amp;&amp;  (SBQQ__SubscriptionTerm__c &lt;=  Initial_Term_Length__c)) ||
((TEXT(SBQQ__Opportunity2__r.Deal_Type__c) = &quot;Renewal&quot; || TEXT(SBQQ__Opportunity2__r.Deal_Type__c) = &quot;Early Renewal&quot;) &amp;&amp;  (SBQQ__SubscriptionTerm__c &gt;  Initial_Term_Length__c)) 
||
TEXT(SBQQ__Opportunity2__r.Deal_Type__c) = &quot;New Business&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outgoing Document - Show First Term Fees</label>
    <type>Checkbox</type>
</CustomField>