unpackaged/main/default/objects/SBQQ__Quote__c/fields/Outgoing_Document_Show_Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Document_Show_Renewal_Term__c</fullName>
    <formula>AND( Auto_Renew__c,  Term_12__c, NOT( Outgoing_Document_Mandatory_Renewal__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outgoing Document - Show Renewal Term</label>
    <type>Checkbox</type>
</CustomField>