unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>サービス開始月 月末締め翌月15日支払い</fullName>
                <label>月末締め翌月15日支払い</label>
            </value>
            <value>
                <fullName>サービス開始月 月末締め翌月末支払い</fullName>
                <label>月末締め翌月末支払い</label>
            </value>
            <value>
                <fullName>サービス開始月 月末締め翌々月15日支払い</fullName>
                <label>請求書発行日から45日以内支払い</label>
            </value>
            <value>
                <fullName>サービス開始月 月末締め翌々月末支払い</fullName>
                <label>請求書発行日から60日以内支払い</label>
            </value>
            <value>
                <fullName>サービス開始月 月末締め90日以内支払い</fullName>
                <label>請求書発行日から90日以内支払い</label>
            </value>
            <value>
                <fullName>サービス開始月 月末締め120日以内支払い</fullName>
                <label>請求書発行日から120日以内支払い</label>
            </value>
            <value>
                <fullName>別途備考欄をご参照ください。</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>