unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_in_Days__c</fullName>
    <formula>IF(BEGINS(TEXT(SBQQ__PaymentTerms__c), &#39;Net &#39;), VALUE(RIGHT(TEXT(SBQQ__PaymentTerms__c), LEN(TEXT(SBQQ__PaymentTerms__c))-4)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms (in Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>