unpackaged/main/default/objects/SBQQ__Quote__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <formula>SBQQ__PriceBook__r.Name</formula>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>