unpackaged/main/default/objects/SBQQ__Quote__c/fields/Quote_ACV__c.field-meta.xml
<CustomField>
    <fullName>Quote_ACV__c</fullName>
    <formula>IF(NOT(ISBLANK(Quote_ACV_Calc__c)), Quote_ACV_Calc__c,
IF(
SBQQ__StartDate__c &gt;= DATE(2019, 01, 01),
IF(
SBQQ__SubscriptionTerm__c &lt;= 12,
SBQQ__NetAmount__c,
(SBQQ__NetAmount__c / SBQQ__SubscriptionTerm__c) * 12
),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>