unpackaged/main/default/objects/SBQQ__Quote__c/fields/Quote_ACV_Calc__c.field-meta.xml
<CustomField>
    <fullName>Quote_ACV_Calc__c</fullName>
    <label>Quote ACV Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>