unpackaged/main/default/objects/SBQQ__Quote__c/fields/Renewal_Extension__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will pull in the correct order form if this quote is for a short term, renewal contract extension.</description>
    <label>Renewal Extension?</label>
    <type>Checkbox</type>
</CustomField>