unpackaged/main/default/objects/SBQQ__Quote__c/fields/Renewal_HA__c.field-meta.xml
<CustomField>
    <fullName>Renewal_HA__c</fullName>
    <formula>Japanese_Template_Show_Address__c = False &amp;&amp; isNotAddOn__c = True &amp;&amp; Deal_Type__c = &quot;Renewal&quot; &amp;&amp; SBQQ__SubscriptionTerm__c &lt;= 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal-HA</label>
    <type>Checkbox</type>
</CustomField>