unpackaged/main/default/objects/SBQQ__Quote__c/fields/Renewal_SA__c.field-meta.xml
<CustomField>
    <fullName>Renewal_SA__c</fullName>
    <description>Renewal Business,Single Year, Show Address</description>
    <formula>Japanese_Template_Show_Address__c = True &amp;&amp; isNotAddOn__c = True &amp;&amp; Deal_Type__c = &quot;Renewal&quot; &amp;&amp; SBQQ__SubscriptionTerm__c &lt;= 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal-SA</label>
    <type>Checkbox</type>
</CustomField>