unpackaged/main/default/objects/SBQQ__Quote__c/fields/Renewal_Term_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Amount__c</fullName>
    <formula>SBQQ__CustomerAmount__c -  Initial_Term_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Term Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>