unpackaged/main/default/objects/SBQQ__Quote__c/fields/Renewed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes (Renewed Contract)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>