unpackaged/main/default/objects/SBQQ__Quote__c/fields/Renewing_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewing_Contract_Start_Date__c</fullName>
    <formula>Renewed_Contract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewing Contract Start Date</label>
    <type>Date</type>
</CustomField>