unpackaged/main/default/objects/SBQQ__Quote__c/fields/Sales_Rep_Personal_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Personal_Name__c</fullName>
    <formula>IF(ISBLANK(SBQQ__SalesRep__r.Personal_Name__c), SBQQ__SalesRep__r.Full_Name__c,SBQQ__SalesRep__r.Personal_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Personal Name</label>
    <type>Text</type>
</CustomField>