unpackaged/main/default/objects/SBQQ__Quote__c/fields/Show_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Show_Annual_Price__c</fullName>
    <formula>Is_Ramp_Deal__c = false &amp;&amp; Term_12__c = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Annual Price</label>
    <type>Checkbox</type>
</CustomField>