unpackaged/main/default/objects/SBQQ__Quote__c/fields/Support_Package_Japan__c.field-meta.xml
<CustomField>
    <fullName>Support_Package_Japan__c</fullName>
    <label>Support Package Japan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver サポート</fullName>
            </value>
            <value>
                <fullName>Gold サポート</fullName>
            </value>
            <value>
                <fullName>Platinum サポート</fullName>
            </value>
            <value>
                <fullName>Platinum+ サポート</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>