unpackaged/main/default/objects/SBQQ__Quote__c/fields/Term_12__c.field-meta.xml
<CustomField>
    <fullName>Term_12__c</fullName>
    <formula>SBQQ__SubscriptionTerm__c &gt; 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term &gt; 12</label>
    <type>Checkbox</type>
</CustomField>