unpackaged/main/default/objects/SBQQ__Quote__c/fields/Use_Start_Date_as_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Use_Start_Date_as_Effective_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected paperwork will use the Start Date of the quote. Otherwise it will be listed as &quot;Date of Last Signature&quot;</inlineHelpText>
    <label>Use Start Date as Effective Date</label>
    <type>Checkbox</type>
</CustomField>