unpackaged/main/default/objects/SBQQ__Quote__c/validationRules/Limit_Ramp_to_6_Months.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Ramp_to_6_Months</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(SBQQ__Opportunity2__r.Contract_Type__c, &quot;Ramp Contract&quot;) &amp;&amp; MOD(SBQQ__SubscriptionTerm__c, 12) &gt; 6</errorConditionFormula>
    <errorMessage>Ramp Contracts may only have a ramp period of 6 months. Please update your Subscription Term to reflect this.</errorMessage>
</ValidationRule>