unpackaged/main/default/objects/SBQQ__Quote__c/validationRules/Subscription_Term_Standard_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Subscription_Term_Standard_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>IF(MOD(SBQQ__SubscriptionTerm__c, 12) &gt; 0 &amp;&amp; ISPICKVAL(SBQQ__Opportunity2__r.Contract_Type__c, &quot;Standard Term Contract&quot;) &amp;&amp;  Outgoing_Document_Mandatory_Renewal__c, true, false)</errorConditionFormula>
    <errorMessage>You may not enter a subscription term that is not a multiple of 12 while Standard Term Contract and Mandatory Renewal is selected. Either change to a Ramp Contract or adjust the Subscription Term</errorMessage>
</ValidationRule>